# polysim

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  release-plz.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: benchmark.yml  ci.yml  dist.yml  release.yml
crates/polysim-cli/: Cargo.toml
crates/polysim-cli/src/: display.rs  main.rs  report.rs
crates/polysim-cli/src/commands/: analyze.rs  compare.rs  generate.rs  mod.rs  properties.rs
crates/polysim-cli/src/utils/: bigsmiles_ext.rs  format.rs  mod.rs
crates/polysim-cli/tests/: cli.rs  cli_compare.rs  cli_properties.rs
crates/polysim-core/: CHANGELOG.md  Cargo.toml
crates/polysim-core/benches/: density.rs  flory_huggins.rs  group_contribution.rs  homopolymer.rs  molecular_weight.rs
crates/polysim-core/src/: error.rs  lib.rs
crates/polysim-core/src/builder/: branched.rs  ensemble.rs  linear.rs  mod.rs  strategy.rs
crates/polysim-core/src/distribution/: flory.rs  log_normal.rs  mod.rs  schulz_zimm.rs
crates/polysim-core/src/polymer/: chain.rs  ensemble.rs  mod.rs
crates/polysim-core/src/properties/: ensemble.rs  formula.rs  group_contribution.rs  mechanical.rs  mod.rs  molecular_weight.rs  optical.rs  permeability.rs  solubility.rs  surface.rs  thermal.rs  viscosity.rs
crates/polysim-core/tests/: branched.rs  copolymer.rs  crystallization.rs  density.rs  distribution.rs  ensemble.rs  flory_huggins.rs  formula.rs  gradient_cyclic.rs  group_contribution.rs  hansen.rs  hildebrand.rs  homopolymer.rs  molecular_weight.rs  permeability.rs  refractive_index.rs  surface.rs  thermal_extra.rs  thermal_vk.rs  viscosity.rs
dev/bench/: compare.html  data.js  index.html  nav.js
scripts/: setup-github-project.sh
tests/: integration.rs
