[workspace]
members = [
    "crates/polysim-core",
    "crates/polysim-cli",
]
resolver = "2"

[workspace.package]
version    = "0.1.1"
edition    = "2021"
license    = "MIT"
authors    = ["Peariforme"]
repository = "https://github.com/Peariforme/polysim"
homepage   = "https://github.com/Peariforme/polysim"

[workspace.dependencies]
bigsmiles  = "0.1"
opensmiles = "0.1"
thiserror  = "2"
rand       = "0.9"
rand_distr = "0.5"
clap       = { version = "4", features = ["derive", "env"] }
criterion  = { version = "0.5", features = ["html_reports"] }
