[package]
name        = "polysim-cli"
description = "Command-line tool for generating and analysing polymer structures (polysim)"
publish     = false

version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true

[[bin]]
name = "polysim"
path = "src/main.rs"

[dependencies]
polysim-core = { path = "../polysim-core" }
