[package]
name        = "polysim-cli"
description = "Command-line tool for generating and analysing polymer structures (polysim)"
publish     = false

version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true

[[bin]]
name = "polysim"
path = "src/main.rs"

[dependencies]
polysim-core = { path = "../polysim-core" }
clap         = { version = "4", features = ["derive"] }
colored      = "2"
comfy-table  = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
