[package]
name        = "polysim-core"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
bigsmiles = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bigsmiles  = { workspace = true }
criterion  = { workspace = true }

[[bench]]
name    = "homopolymer"
harness = false
